Fix wrapping issue in Firefox

--- a/_sass/sass/elements/title.sass
+++ b/_sass/sass/elements/title.sass
@@ -18,7 +18,9 @@ $subtitle-negative-margin: -1.25rem !default
 .title,
 .subtitle
   +block
-  word-break: break-word
+  word-break: break-all
+	a
+	  display: block
   em,
   span
     font-weight: inherit
